# my_grc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 20260314_0001_initial_schema.py  20260317_0002_scf_reference_library.py  20260317_0003_foundation_uplift.py  20260317_0004_access_governance.py  20260319_0005_ai_knowledge_packs.py  20260320_0006_user_feedback_mailbox.py  20260320_0007_workspace_auth.py
documentation/: README.md
documentation/assessment/: AI_COPILOT_STATUS_ASSESSMENT.md  COHESION_SECURITY_ASSESSMENT.md  CURRENT_DELIVERY_READINESS_ASSESSMENT.md  FOUNDATION_UPLIFT_ASSESSMENT.md  IMPLEMENTATION_MATURITY.md  IMPORT_EXTENSIBILITY_ASSESSMENT.md  LEVEL4_REASSESSMENT.md  MATURITY_HISTORY.yaml  PHASE1_DELIVERY_SUMMARY.md  PHASE1_GAP_CLOSURE_ITERATION.md  PHASE1_STRICT_4OF5_ASSESSMENT.md  PHASE2_ASSESSMENT.md  PROJECT_HYGIENE_ITERATIONS.md  UI_UX_ASSESSMENT.md  UNIFIED_WORKSPACE_CONSOLIDATION.md  USER_EXPERIENCE_ITERATION_ASSESSMENT.md  UX_REDESIGN_ASSESSMENT.md
scripts/: docker-entrypoint.sh  docker_scan.sh  docker_smoke.sh  run_e2e_tests.sh  run_recovery_drill.sh  run_release_gates.sh  run_workspace.sh  ubuntu_bootstrap.sh  ubuntu_validate.sh
testing/: README.md
workspace/: about_center.py  app.py  control_framework_studio.py  control_framework_studio_v2.py  operations_workspace.py  portfolio_center.py  questionnaire_center.py  setup_center.py  ui_support.py  ux_redesign.py
(+117 files in other folders)
